<resources>
	<string name="app_name">AG_キラ☆ドル</string>

	<!-- activity_start0 -->
	<string name="stringSpace">　</string>
	<string name="buttonToExplanation">ルール説明を聞く</string>
	<string name="buttonToStartGame">ゲームを始める</string>

	<!-- activity_explanation -->
	<!-- 美夢ちゃん -->
	<string name="explanationMiyu0">はじめまして！ 私は美夢。原（パラ）宿に住む中学1年生！\nアイドルを目指しているんだ。</string>
	<string name="explanationMiyu1">この前，私の大好きな動画サイト「プリプリ動画」で\n「おまいらが選ぶキラキラ☆アイドルオーディション」\nっていう生放送イベントが発表されたの。</string>
	<string name="explanationMiyu2">私はそのイベントに参加することにしたの。でも，参加する\nには事前に動画を配信してキラキラ（高評価）を得る必要が\nあるみたい。</string>
	<string name="explanationMiyu3">だから，私はこれから会場プリ袋に向かう途中で配信しよう\nと考えてるんだ。</string>
	<!-- プリプリ動画開発者 -->
	<string name="explanationPri0">それではプリプリ動画開発責任者の私がゲームのプレイ方法\nを説明します。</string>
	<string name="explanationPri1">まず，この説明が終わるとメインステージが始まります。\nメインステージは全部で3ステージあります。</string>
	<string name="explanationPri2">メインステージは端末を傾けることでキャラが移動します。\nまた，画面右下のジャンプボタンを押すとジャンプしますの\nで，駅を目指して進んでください。</string>
	<string name="explanationPri3">駅に着くと，次のステージが始まります。一度駅に入ると\n前のステージには戻れませんので，ご注意ください。</string>
	<string name="explanationPri4">ステージ中にある☆を取ると，キラキラ（高評価）が集まり\nます。たくさん集めると良いことが起こります。逆に，取ら\nなかった場合ゲームオーバーとなります。</string>
	<string name="explanationPri5">他にも，批判厨「キライダー」にあたったり，坂や川に落ち\nたりすると，ゲームオーバーとなります。</string>
	<string name="explanationPri6">メイン3ステージが終わると音ゲーが始まります。タイミング\nよくピコンタップタップしてください。</string>
	<string name="explanationPri7">説明は以上です。それではゲームを始めましょう。\n（画面をタップするとゲームが始まります）</string>

	<!-- activity_main -->
	<string name="buttonDebugReturn">戻る（Debug）</string>
	<string name="buttonDebugNext">進む（Debug）</string>
	<string name="TextKiraKiraPoint"> pt</string>
	<string name="TextViewGameOver">ゲームオーバー</string>
	<string name="TextViewClear">ステージクリア！</string>
	<string name="TextViewNextChara"> さんがあなたをフォヨーしました。</string>
	<string name="TextViewNoNextChara">新しいフォヨワーはいません。</string>
	<string name="buttonRetry">もう1回遊んでみゆ</string>
	<string name="buttonNext">次のステージへ行ってみゆ</string>

	<!-- activity_mini_select -->
	<string name="buttonSelectOk">決定</string>
	<string name="cm">Coming Soon !!!</string>

</resources>
